fetch banks added
